# REGIO

./: .$Diagrama_clases.drawio.bkp  .gitignore  .gitmodules  CMakeLists.txt  README.md  REGIO.sln  build.bat  set-visual-env.bat
.github/workflows/: release-windows.yml
REGIO/: Camera.cpp  Camera.h  D3D11Renderer.cpp  D3D11Renderer.h  D3dclass.cpp  D3dclass.h  DxgiInfoManager.cpp  DxgiInfoManager.h  Graphicsclass.cpp  Graphicsclass.h  Inputclass.cpp  LightEffect.fx  LightHelper.fx  LightHelper.h  Macros.h  Main.cpp  MyException.cpp  MyException.h  OpaquePass.cpp  OpaquePass.h  PixelShader.hlsl  REGIO.vcxproj  REGIO.vcxproj.filters  ResourceManager.cpp  ResourceManager.h  SceneLoader.cpp  SceneLoader.h  ShadowMap.cpp  ShadowMap.h  ShadowPass.cpp  ShadowPass.h  SkyPass.cpp  SkyPass.h  SkyPixelShader.hlsl  Systemclass.cpp  Systemclass.h  VertexShader.hlsl  d3dclass.cpp  d3dclass.h  dxerr.h  (+7 more)
REGIO/Common/: Common.h  DX11Common.h  LightHelper.h  Macros.h  Profiler.h  RenderItem.h
REGIO/Effects/: LightEffect.fx
REGIO/Interfaces/: IRenderPass.h  IRenderer.h
REGIO/Shaders/: PixelShader.hlsl  SimplePixelShader.hlsl  VertexShader.hlsl  common.hlsl
